// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Component should match snapshot with input type email 1`] = `
<input
  autoComplete="false"
  disabled={true}
  maxLength="255"
  onChange={[MockFunction]}
  placeholder="Enter email"
  spellCheck="false"
  type="email"
  value="a value"
/>
`;

exports[`TextInput Component should match snapshot with input type password 1`] = `
<input
  autoComplete="false"
  disabled={false}
  maxLength="255"
  onChange={[MockFunction]}
  placeholder="Enter password"
  spellCheck="false"
  type="password"
  value="a value"
/>
`;

exports[`TextInput Component should match snapshot with input type text 1`] = `
<input
  autoComplete="false"
  disabled={false}
  maxLength="32"
  onChange={[MockFunction]}
  placeholder="Enter username"
  spellCheck="false"
  type="text"
  value="a value"
/>
`;
